<resources>
    <string name="app_name">Bangun Datar</string>
    <string name="owner">Nur Izza Latifah</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="persegi">Persegi</string>
    <string name="persegi_panjang">PersegiPanjang</string>
    <string name="jajar_genjang">Jajar Genjang</string>
    <string name="belah_ketupat">Belah Ketupat</string>
    <string name="segitiga">Segitiga</string>
    <string name="layang_layang">Layang Layang</string>
    <string name="trapesium">Trapesium</string>

    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="sisi">Sisi</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="d1">Diagonal 1</string>
    <string name="d2">Diagonal 2</string>
    <string name="jari_jari">Jari Jari</string>
    <string name="b1">Sisi Atas</string>
    <string name="b2">Sisi Bawah</string>

    <string name="luas">Hitung Luas</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>